# pyluach

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  README.rst  README.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: github-actions-pytest.yml  testing-and-coverage.yml
docs/: Makefile  conf.py  dates.rst  hebrewcal.rst  index.rst  make.bat  parshios.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  luachcal.doctree
docs/_build/html/: genindex.html  index.html  luachcal.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/luachcal/: dates.html  hebrewcal.html  parshios.html  tests.html  utils.html
docs/_build/html/_sources/: index.txt  luachcal.txt  pyluach.txt
luachcal/: __init__.py  dates.py  hebrewcal.py  parshios.py  tests.py  utils.py
pyluach/: __init__.py  dates.py  gematria.py  hebrewcal.py  parshios.py  tests.py  utils.py
src/pyluach/: __init__.py  dates.py  hebrewcal.py  parshios.py  utils.py
tests/: test_dates.py  test_gematria.py  test_hebrewcal.py  test_parshios.py  test_rendered_calendar.py
